[tool.poetry]
name = "spotify-backup"
version = "0.1.0"
description = "A Python script that exports all of your Spotify playlists."
authors = ["Casey Chu"]
license = ""

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
flake8-printf-formatting = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
